--- a/webdevelopment/introMcAleer.html
+++ b/webdevelopment/introMcAleer.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 
-     Hello World! My name is Alison McAleer. I am in the Ed.S program for Information Technology and Design. My background is in Special Education and I also have a Masters in Educational Leadership. I have 3 daughters, all under the age of 5. I am currently a 2nd grade teacher, however, I love; photography, crafting, and traveling with my family! My favorite out of these hobbies (aside from travelling with the family) is photography! I have recently been diving more into reading which I am also excited about! I did a brief coding class in high school so I consider myself to have minimal experience in web development. My expectations are that I can learn how to code properly and get a firm foundation on how to develop meaningful content for audiences. I would love to develop some educational websites in the future. 
+Hello, World!
+My name is Alison McAleer, and I’m currently enrolled in the Ed.S. program for Information Technology and Design. I bring a background in Special Education and hold a Master’s degree in Educational Leadership. I’m also a proud mom of three daughters—all under the age of five!
 
- 
+I currently teach 2nd grade, but my passions extend beyond the classroom. I love photography (my favorite creative outlet), crafting, and traveling with my family. Recently, I’ve also been diving back into reading and really enjoying the journey.
+
+Though my coding experience is limited to a brief class in high school, I’m eager to build a strong foundation in web development. My goal is to create meaningful, engaging digital content—especially educational websites that support diverse learners and educators.
+
+Ultimately, I hope to become an Instructional Technology Specialist or Instructional Designer for a school district or an educational company or organization. I’m excited to blend my teaching background with technology to improve learning experiences for all students.
 
 </body>
 </html>
