--- a/webdevelopment/introMcAleer.html
+++ b/webdevelopment/introMcAleer.html
@@ -7,14 +7,7 @@
 </head>
 <body>
 
-Hello, World!
-My name is Alison McAleer, and I’m currently enrolled in the Ed.S. program for Information Technology and Design. I bring a background in Special Education and hold a Master’s degree in Educational Leadership. I’m also a proud mom of three daughters—all under the age of five!
-
-I currently teach 2nd grade, but my passions extend beyond the classroom. I love photography (my favorite creative outlet), crafting, and traveling with my family. Recently, I’ve also been diving back into reading and really enjoying the journey.
-
-Though my coding experience is limited to a brief class in high school, I’m eager to build a strong foundation in web development. My goal is to create meaningful, engaging digital content—especially educational websites that support diverse learners and educators.
-
-Ultimately, I hope to become an Instructional Technology Specialist or Instructional Designer for a school district or an educational company or organization. I’m excited to blend my teaching background with technology to improve learning experiences for all students.
+Hello, World! My name is Alison McAleer, and I’m currently enrolled in the Ed.S. program for Information Technology and Design. I bring a background in Special Education and hold a Master’s degree in Educational Leadership. I’m also a proud mom of three daughters—all under the age of five!I currently teach 2nd grade, but my passions extend beyond the classroom. I love photography (my favorite creative outlet), crafting, and traveling with my family. Recently, I’ve also been diving back into reading and really enjoying the journey. Though my coding experience is limited to a brief class in high school, I’m eager to build a strong foundation in web development. My goal is to create meaningful, engaging digital content—especially educational websites that support diverse learners and educators. Ultimately, I hope to become an Instructional Technology Specialist or Instructional Designer for a school district or an educational company or organization. I’m excited to blend my teaching background with technology to improve learning experiences for all students.
 
 </body>
 </html>
