--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -7,9 +7,9 @@
 <body>
     <nav>
         <a href="/home">Home</a>
-        <a href="/educator credentials">Educator Credentials</a>
-    <a href="let's learn">Let's Learn!</a>
-    <a href="resources and references">Resources & references</a>
+        <a href="/educatorcredentials">Educator Credentials</a>
+    <a href="letslearn">Let's Learn!</a>
+    <a href="resourcesandreferences">Resources & references</a>
     </nav>
 <! -- This is the main content of my site -->
     <main><header><h1>Welcome everyone to “Jumping into Geometry!” </h1><h2> This site is an introduction into 2D shapes and 3D figures.  </h1></header>
