--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -3,7 +3,7 @@
 <head>
                <meta charset="utf-8">
                <title>Jumping into Geometry!</title>
-               <link rel="heading1" href="style.css">
+               <link rel="h1" href="style.css">
 </head>
 <body>
     <nav>
@@ -13,7 +13,7 @@
     <a href="resourcesandreferences">Resources & references</a>
     </nav>
 <!-- This is the main content of my site -->
-    <main><header><h1 id="heading1">Welcome everyone to “Jumping into Geometry!” </h1><h2> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
+    <main><header><h1 id="h1">Welcome everyone to “Jumping into Geometry!” </h1><h2> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
 <p>The purpose of this website is to introduce parents and students to the basics of geometry. This includes identifying (naming) 2D shapes and 3D figures, understanding the difference between 2D and 3D figures, as well as naming attributes of both in order to identify them. This website will include not only information regarding the concepts but also provide resources for parents to help their child at home. I want a website that is colorful yet clean that is interactive. This will help it appeal to children and parents.</p>
 <br><h2>Goals of this site...</h2>
 <p>Students will be able to name 2D shapes. 
