--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -5,25 +5,31 @@
    Use: To teach visitors of the site about the author
    School: University of Missouri
    Developed 6/13/2025
-   Tested:6/14/2025 on Edge and Chrome -->
+   Tested:6/14/2025 passed on Edge and Chrome -->
 <head>
                <meta charset="utf-8">
                <title>Educator Credentials</title>
+               <style>
+                .boxed-link { display: inline-block; padding: 4px 8px; color: black; background-color: lightcoral; border: 5px solid black;
+        
+                }
+               </style>
 </head>
 <body>
 <nav>
     <a href="home">Home</a>
     <a href="educatorcredentials">Educator Credentials</a>
-    <a href="let'slearn">Let's Learn!</a>
+    <a href="letslearn">Let's Learn!</a>
     <a href="resourcesandreferences">Resources & references</a>
     </nav>
   <!-- This is the main content of my site -->
 <main>
   <header><h1><em>Alison McAleer</em></h1></header><h2> Educator Credentials</h2>
 <p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p></main>
-<blockquote cite="https://www.brainyquote.com/quotes/aristotle_100762?src=t_education">The roots of education are bitter, but the fruit is sweet.</blockquote>   
-<br><h3><strong>Trainings & Certifications</strong></h3> <p><em>Trained</em> in <strong>Orton Gillingham</strong></p><p>Trained in Barton Reading & Spelling Program</p><p>CPR & First Aid Certified</p><p>Adaptive Education Certified</p><p>Middle Grades Math Certified</p>
+<blockquote cite="https://www.brainyquote.com/quotes/aristotle_100762?src=t_education">The roots of education are bitter, but the fruit is sweet. - Aristotle </blockquote>   
+<br><h3><strong>Trainings & Certifications</strong></h3> <p><em>Trained</em> in <strong>Orton Gillingham</strong></p><p>Trained in Barton Reading & Spelling Program</p><p>CPR & First Aid Certified</p><p>Adaptive Education Certified</p><p>Middle Grades Math Certified</p> <p>See my complete Resume <a href="alisonresume2025.pdf" class="boxed-link">here!</a></p>
        
 <nav><footer>Alison McAleer<nav><a href="contactme"> ampdp@umsystem.edu</a></nav> Copyright 2025 Alison McAleer </footer></nav>
+
 </body>
 </html>
