--- a/webdevelopment/mcaleer_template.html
+++ b/webdevelopment/mcaleer_template.html
@@ -3,18 +3,22 @@
 <head>
                <meta charset="utf-8">
                <title>Page Title</title>
+               <link rel="stylesheet" type="text/css" href="nav.css">
 </head>
 <body>
-<nav>
-        <a href="/home">Home</a>
-        <a href="/educatorcredentials">Educator Credentials</a>
-    <a href="letslearn">Let's Learn!</a>
-    <a href="resourcesandreferences">Resources & references</a>
+    <nav>
+<ul class="nav">
+
+        <li><a href="/home">Home</a></li>
+        <li><a href="/educatorcredentials"> About </a></li>
+    <li><a href="letslearn"> Let's Learn</a></li>
+    <li><a href="resourcesandreferences">Resources & References</a></li>
+    </ul>
     </nav>
 <!-- This is the main content of my site -->
     <main><header><h1>Welcome everyone to “Jumping into Geometry!” </h1><h2> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
-
++
 </main>
-<nav><footer>Alison McAleer <nav><a href="contactme"> ampdp@umsystem.edu</a></nav> Copyright 2025 Alison McAleer </footer></nav>
+<footer>Alison McAleer <a href="contactme"> ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer </footer>
 </body>
 </html>
