--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -9,10 +9,17 @@
 <body>
    <nav>
 <ul class="nav">
-
         <li><a href="/home">Home</a></li>
         <li><a href="/educatorcredentials"> About </a></li>
-    <li><a href="letslearn"> Let's Learn</a></li>
+
+    <li class="dropdown">
+        <a href="letslearn">Let's Learn </a>
+         <ul class="dropdown-menu">
+    <li><a href="link1">Link 1</a></li>
+    <li><a href="link2">Link 2</a></li>
+    <li><a href="link3">Link 3</a></li>
+</ul>
+</li>
     <li><a href="resourcesandreferences">Resources & References</a></li>
     </ul>
     </nav>
