--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -9,9 +9,9 @@
 <body>
    <nav>
 <ul class="nav">
-        <li><a href="/home">Home</a></li>
-        <li><a href="/educatorcredentials"> About </a></li>
 
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html"> About </a></li>
     <li class="dropdown">
         <a href="letslearn">Let's Learn </a>
          <ul class="dropdown-menu">
@@ -19,9 +19,9 @@
     <li><a href="link2">Link 2</a></li>
     <li><a href="link3">Link 3</a></li>
 </ul>
-</li>
-    <li><a href="resourcesandreferences">Resources & References</a></li>
-    </ul>
+    <li><a href="reflection.html">Resources & References</a></li>
+    <li><a href="contact">Contact</a></li>
+</ul>
     </nav>
 <!-- This is the main content of my site -->
     <main><header><h1 id="h1">Welcome everyone to “Jumping into Geometry!” </h1><h2> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
