--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -9,18 +9,25 @@
 <head>
                <meta charset="utf-8">
                <title>Educator Credentials</title>
-               <style>
-                .boxed-link { display: inline-block; padding: 4px 8px; color: black; background-color: lightcoral; border: 5px solid black;
-        
-                }
-               </style>
+                <link rel="stylesheet" type="text/css" href="nav.css">
+               <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav>
-    <a href="home">Home</a>
-    <a href="educatorcredentials">Educator Credentials</a>
-    <a href="letslearn">Let's Learn!</a>
-    <a href="resourcesandreferences">Resources & references</a>
+  <nav>
+<ul class="nav">
+
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html"> About </a></li>
+    <li class="dropdown">
+        <a href="letslearn">Let's Learn </a>
+         <ul class="dropdown-menu">
+    <li><a href="link1">Link 1</a></li>
+    <li><a href="link2">Link 2</a></li>
+    <li><a href="link3">Link 3</a></li>
+</ul>
+    <li><a href="reflection.html">Resources & References</a></li>
+    <li><a href="contact">Contact</a></li>
+</ul>
     </nav>
   <!-- This is the main content of my site -->
 <main>
