--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -40,10 +40,26 @@
         <h3 class="h3">Helpful Videos from other Sources on 2D Shapes & 3D figures</h3>
            <p class="intro">These videos can help your student learn more about 2D & 3D shapes.
     </p>
-        <section class="section">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/gk_u1xr7jQg?si=QTzLbwe0-mF3-YDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/r845CIhu5Ok?si=Zj9lLYaLEjFxGHrs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</section>
+       <iframe 
+  width="560" 
+  height="315" 
+  src="https://www.youtube.com/embed/gk_u1xr7jQg?si=321M5JG4-BLJnqiU" 
+  title="YouTube video player" 
+  style="border: none;" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  referrerpolicy="strict-origin-when-cross-origin" 
+  allowfullscreen>
+</iframe>
+        <iframe 
+  width="560" 
+  height="315" 
+  src="https://www.youtube.com/embed/r845CIhu5Ok?si=Zj9lLYaLEjFxGHrs"
+  style="border: none;" 
+  allowfullscreen
+  referrerpolicy="strict-origin-when-cross-origin"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share">
+</iframe>
+
         <h2 class="h2">References</h2>
      <p class="p2">Here are the references and sources I used to help make my site!</p>
             
@@ -53,7 +69,7 @@
          <p class="p">“Polygons.” Math Is Fun, edited by Rod Pierce, 2024,<a href="www.mathsisfun.com/geometry/polygons.html"> www.mathsisfun.com/geometry/polygons.html. </a> </p> 
          <p class="p">"Math Salamanders." The Math Salamanders, <a href="www.math-salamanders.com">www.math-salamanders.com</a>, Accessed 29 June 2025.</p>
          <p class="p">LampoFilm. “3D Shapes Faces Edges Vertices – Geometry for Kids.” YouTube, uploaded by LampoFilm, 29 Apr. 2020 https://youtu.be/r845CIhu5Ok?si=27uQZGw1P5B3IpYc </p>
-</p>
+
 
 
    
