--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -12,7 +12,7 @@
                 <link rel="stylesheet" type="text/css" href="nav.css">
                <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
   <nav>
 <ul class="nav">
 
@@ -31,11 +31,28 @@
     </nav>
   <!-- This is the main content of my site -->
 <main>
-  <header><h1><em>Alison McAleer</em></h1></header><h2> Educator Credentials</h2>
-<p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p></main>
-<blockquote cite="https://www.brainyquote.com/quotes/aristotle_100762?src=t_education">The roots of education are bitter, but the fruit is sweet. - Aristotle </blockquote>   
-<br><h3><strong>Trainings & Certifications</strong></h3> <p><em>Trained</em> in <strong>Orton Gillingham</strong></p><p>Trained in Barton Reading & Spelling Program</p><p>CPR & First Aid Certified</p><p>Adaptive Education Certified</p><p>Middle Grades Math Certified</p> <p>See my complete Resume <a href="alisonresume2025.pdf" class="boxed-link">here!</a></p>
-       
+  <header><h1 class="h1"><em>Alison McAleer</em></h1></header><h1 class="h1"> Educator Credentials</h1>
+ <div class="flex-container">><iframe width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" frameborder="0" allowfullscreen></iframe>
+<div class="quote-box"><p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p></main>
+ </div></div>
+ <br>
+ <br>
+<br>
+<div class="flex-container">
+  <img src="alisonheadshot.jpg" class="img" alt="Alison McAleer Headshot">
+  <div class="quote-box"> <h2><strong>Trainings & Certifications</strong></h2><p><em>Trained</em> in <strong>Orton Gillingham</strong></p><p>Trained in Barton Reading & Spelling Program</p><p>CPR & First Aid Certified</p><p>Adaptive Education Certified</p><p>Middle Grades Math Certified</p> <p>See my complete Resume <a href="alisonresume2025.pdf" class="boxed-link">here!</a></p></div></div>
+  <br>
+  <br>
+  <br>
+  <div class="flex-container">
+  <div class="quote-box">
+    <blockquote class="quotes">
+      "The roots of education are bitter, but the fruit is sweet." – Aristotle
+    </blockquote>
+  </div>
+</div>
+
+
 <nav><footer>Alison McAleer<nav><a href="contactme"> ampdp@umsystem.edu</a></nav> Copyright 2025 Alison McAleer </footer></nav>
 
 </body>
