--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -32,9 +32,12 @@
   <!-- This is the main content of my site -->
 <main>
   <header><h1 class="h1"><em>Alison McAleer</em></h1></header><h1 class="h1"> Educator Credentials</h1>
- <div class="flex-container">><iframe width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" frameborder="0" allowfullscreen></iframe>
-<div class="quote-box"><p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p></main>
- </div></div>
+ 
+  <div class="flex-container"><iframe width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" frameborder="0" allowfullscreen></iframe>
+<div class="quote-box">
+  <p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p>
+</div>
+</div>
  <br>
  <br>
 <br>
@@ -52,7 +55,7 @@
   </div>
 </div>
 
-
+</main>
 <nav><footer>Alison McAleer<nav><a href="contactme"> ampdp@umsystem.edu</a></nav> Copyright 2025 Alison McAleer </footer></nav>
 
 </body>
