--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -38,8 +38,8 @@
    </iframe>
 <div class="quote-box">
   <p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p>
-</div>
-</div>
+
+</div></div>
  <br>
  <br>
 <br>
