--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -5,8 +5,9 @@
                <title>Jumping into Geometry!</title>
                <link rel="stylesheet" href="style.css">
             <link rel="stylesheet"  type="text/css" href="nav.css">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
             </head>
-<body>
+<body class="body">
    <nav>
 <ul class="nav">
 
@@ -19,18 +20,36 @@
     <li><a href="link2">Link 2</a></li>
     <li><a href="link3">Link 3</a></li>
 </ul>
-    <li><a href="reflection.html">Resources & References</a></li>
+   <li><a href="reflection.html">Resources & References</a></li>
     <li><a href="contact">Contact</a></li>
 </ul>
     </nav>
 <!-- This is the main content of my site -->
-    <main><header><h1 id="h1">Welcome everyone to “Jumping into Geometry!” </h1><h2> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
-<p>The purpose of this website is to introduce parents and students to the basics of geometry. This includes identifying (naming) 2D shapes and 3D figures, understanding the difference between 2D and 3D figures, as well as naming attributes of both in order to identify them. This website will include not only information regarding the concepts but also provide resources for parents to help their child at home. I want a website that is colorful yet clean that is interactive. This will help it appeal to children and parents.</p>
-<br><h2>Goals of this site...</h2>
-<p>Students will be able to name 2D shapes. 
-Students will be able to name 3D figures. 
-Students will be able to tell the difference between 2D and 3D figures due to the differences in attributes. </p>
-<p>The objective of the website is for it to be a clean, visually appealing site that is directed towards young learners and their families. Also, it will teach the introductory basics of geometry and provide resources for families to help develop the concept with their students. </p>
+    <main><header><h1 class="h1">Jumping into Geometry! </h1><h2 class="h2"> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
+<div class="flex-container">
+    <img src="frog.jpg" class="img">
+    <div class="quote-box">
+        <p>The purpose of this website is to introduce parents and students to the basics of geometry. This includes identifying (naming) 2D shapes and 3D figures, understanding the difference between 2D and 3D figures, as well as naming attributes of both in order to identify them. This website will include not only information regarding the concepts but also provide resources for parents to help their child at home. I want a website that is colorful yet clean that is interactive. This will help it appeal to children and parents.</p>
+</div></div>
+        <br><div class="flex-container">
+<div class="quote-box"><h2>Goals of this site...</h2>
+<ol>
+    <li> Students will be able to name 2D shapes. </li>
+<li>Students will be able to name 3D figures. </li>
+<li>Students will be able to tell the difference between 2D and 3D figures due to the differences in attributes.</li> </p>
+</ol></div>
+<br>
+ <div class="quote-box">
+<h2>Objective of this site:</h2>
+<ul>
+    <li>Clean & visually appealing</li>
+    <li>Directed towards young learners</li>
+    <li>Provide resources for families </li>
+    <li>Teach introductory basics of geometry </li>
+    
+</ul> 
+</div>
+</div>
 </main>
 <nav><footer>Alison McAleer <nav><a href="contactme"> ampdp@umsystem.edu</a></nav> Copyright 2025 Alison McAleer </footer></nav>
 </body>
