--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -9,26 +9,32 @@
 <head>
                <meta charset="utf-8">
                <title>Educator Credentials</title>
-                <link rel="stylesheet" type="text/css" href="nav.css">
+                
                <link rel="stylesheet" href="style.css">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+<link rel="stylesheet" type="text/css" href="navRESPONSIVETEST.css">
 </head>
 <body class="body">
-  <nav>
-<ul class="nav">
-
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html"> About </a></li>
-    <li class="dropdown">
-        <a href="letslearn">Let's Learn </a>
-         <ul class="dropdown-menu">
-    <li><a href="link1">Link 1</a></li>
-    <li><a href="link2">Link 2</a></li>
-    <li><a href="link3">Link 3</a></li>
-</ul>
-    <li><a href="reflection.html">Resources & References</a></li>
-    <li><a href="contact">Contact</a></li>
-</ul>
-    </nav>
+ <nav class="nav">
+  
+    
+<ul class="menu">
+    <li class="logo"><a href="">Jumping into Geometry!</a></li>
+    <li class="item"> <a href="index.html">Home</a></li>
+    <li class="item"><a href="about.html">About</a></li>
+    <li class="item has-submenu">
+        <a tabindex="0"> Let's Learn!</a>
+        <ul class="submenu">
+            <li class="subitem"><a href="link1">Goal1</a></li>
+            <li class="subitem"><a href="link2">Goal2</a></li>
+            <li class="subitem"><a href="link3">Goal3</a></li>
+        </ul>
+    </li>
+    <li class="item"><a href="reflection.html">Resources & References</a></li>
+    <li class="item"><a href="contact">Contact</a></li>
+    <li class="toggle"><a href="#">&#9776;</a></li>
+    </ul> </nav>
   <!-- This is the main content of my site -->
 <main>
   <header><h1 class="h1"><em>Alison McAleer</em></h1></header><h1 class="h1"> Educator Credentials</h1>
@@ -57,7 +63,7 @@
   </div>
 </div>
 
-</main>
+</main><script src="responsivetest.js"><!-- Linking the JS file -->    </script> 
 <nav><footer>Alison McAleer<nav><a href="contactme"> ampdp@umsystem.edu</a></nav> Copyright 2025 Alison McAleer </footer></nav>
 
 </body>
