--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -32,7 +32,7 @@
 <!-- This is the main content of my site -->
     <main><header><h1 class="h1">Jumping into Geometry! </h1><h2 class="h2"> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
 <div class="flex-container">
-    <img src="frog.jpg" alt="img" width="300px" height="300px">
+    <img src="frog.jpg" style="width: 300px; height: 300px;">
     <div class="quote-box">
         <p>The purpose of this website is to introduce parents and students to the basics of geometry. This includes identifying (naming) 2D shapes and 3D figures, understanding the difference between 2D and 3D figures, as well as naming attributes of both in order to identify them. This website will include not only information regarding the concepts but also provide resources for parents to help their child at home. I want a website that is colorful yet clean that is interactive. This will help it appeal to children and parents.</p>
 </div></div>
@@ -41,7 +41,7 @@
 <ol>
     <li> Students will be able to name 2D shapes. </li>
 <li>Students will be able to name 3D figures. </li>
-<li>Students will be able to tell the difference between 2D and 3D figures due to the differences in attributes.</li> </p>
+<li>Students will be able to tell the difference between 2D and 3D figures due to the differences in attributes.</li> 
 </ol></div>
 <br>
  <div class="quote-box">
@@ -56,7 +56,7 @@
 </div>
 </div>
 </main>
- <script src="responsivetest.js"><!-- Linking the JS file -->    </script> 
+ <script src="responsivetest.js"></script> 
 <nav><footer>Alison McAleer <nav><a href="contactme"> ampdp@umsystem.edu</a></nav> Copyright 2025 Alison McAleer </footer></nav>
 </body>
 </html>
