--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -32,7 +32,7 @@
 <!-- This is the main content of my site -->
     <main><header><h1 class="h1">Jumping into Geometry! </h1><h2 class="h2"> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
 <div class="flex-container">
-    <img src="frog.jpg" style="width: 300px; height: 300px;">
+    <img src="frog.jpg" width="300" height="200" alt="Frog picture">
     <div class="quote-box">
         <p>The purpose of this website is to introduce parents and students to the basics of geometry. This includes identifying (naming) 2D shapes and 3D figures, understanding the difference between 2D and 3D figures, as well as naming attributes of both in order to identify them. This website will include not only information regarding the concepts but also provide resources for parents to help their child at home. I want a website that is colorful yet clean that is interactive. This will help it appeal to children and parents.</p>
 </div></div>
