--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -38,10 +38,9 @@
      <div class="flex-container"><div class="quote-box">
         <h2 class="h2"> Resources</h2>
         <ul class="ul">
-            <br>
-        <li><a href="https://www.math-salamanders.com/2d-shapes-worksheets.html"> Math Salamanders' Worksheets </a> </li> <br>
-        <li><a href="https://www.math-salamanders.com/3d-shapes-worksheets.html"> 3D Worksheets by Math Salamanders</a> </li><br>
-        <li><a href="http://www.splashlearn.com/math-vocabulary/geometry/3-dimensional"> Splashlearn 3D</a></li><br>
+        <li><a href="https://www.math-salamanders.com/2d-shapes-worksheets.html"> Math Salamanders' Worksheets </a> </li> 
+        <li><a href="https://www.math-salamanders.com/3d-shapes-worksheets.html"> 3D Worksheets by Math Salamanders</a> </li>
+        <li><a href="http://www.splashlearn.com/math-vocabulary/geometry/3-dimensional"> Splashlearn 3D</a></li>
         <li><a href="https://www.mathsisfun.com/geometry/polygons.html">Math is Fun! - Polygons</a></li>
         </ul>
        </div></div>
