--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -9,8 +9,8 @@
 <head>
                <meta charset="utf-8">
                <title>Educator Credentials</title>
-            <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-             <link rel="icon" href="images/favicon_io (2)/favicon.ico" type="image/x-icon">
+            <link rel="icon" href="favicon.ico" type="image/x-icon">
+             <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
                <link rel="stylesheet" href="style.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
            
@@ -72,8 +72,8 @@
 </div>
 
 </main>
-<footer>Alison McAleer <a href="contactme"><img src="images/favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">  
-ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img src="images/favicon_io (2)/favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;"> 1+888-888-8888 </footer>
+<footer>Alison McAleer <a href="contactme"><img src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">  
+ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;"> 1+888-888-8888 </footer>
 
 </body>
 </html> 
