--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -72,8 +72,9 @@
 </div>
 
 </main>
-<footer>Alison McAleer <a href="contactme"><img src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">  
-ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;"> 1+888-888-8888 </footer>
+<footer>Alison McAleer <a href="contactme"><img class="icon"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">
+  <img class="iconbig"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">  
+ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img class="icon" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;"> <img class="iconbig" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;">1+888-888-8888 </footer>
 
 </body>
 </html> 
