--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -21,18 +21,17 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-      <a href="#">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
-      <ul class="submenu">
-        <li class="subitem"><a href="link1">Goal1</a></li>
-        <li class="subitem"><a href="link2">Goal2</a></li>
-        <li class="subitem"><a href="link3">Goal3</a></li>
+     <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+     <ul class="submenu">
+        <li class="subitem"><a href="learn.html/#2Dshapes">2D Shapes</a></li>
+        <li class="subitem"><a href="learn.html/#3Dshapes">3D Figures</a></li>
+        <li class="subitem"><a href="learn.html/#comparison">2D vs. 3D</a></li>
       </ul>
     </li>
     <li><a href="reflection.html">Resources & References</a></li>
     <li><a href="contact">Contact</a></li>
   </ul>
 </nav>
-
 <!-- This is the main content of my site -->
     <main><header><h1 class="h1">Jumping into Geometry! </h1><h2 class="h2"> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
 <div class="flex-container">
