--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -25,7 +25,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-      <a href="#">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+      <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
       <ul class="submenu">
         <li class="subitem"><a href="#2Dshapes">2D Shapes</a></li>
         <li class="subitem"><a href="#3Dshapes">3D Figures</a></li>
