--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -18,11 +18,11 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-      <a href="#">Let's Learn!<label for="submenu-toggle" class="dropdownarrow">&#9660;</label></a> 
-      <ul class="submenu">
-        <li class="subitem"><a href="link1">Goal1</a></li>
-        <li class="subitem"><a href="link2">Goal2</a></li>
-        <li class="subitem"><a href="link3">Goal3</a></li>
+     <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+     <ul class="submenu">
+        <li class="subitem"><a href="learn.html/#2Dshapes">2D Shapes</a></li>
+        <li class="subitem"><a href="learn.html/#3Dshapes">3D Figures</a></li>
+        <li class="subitem"><a href="learn.html/#comparison">2D vs. 3D</a></li>
       </ul>
     </li>
     <li><a href="reflection.html">Resources & References</a></li>
