--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -52,7 +52,7 @@
          <p>A shape that is either not connected by their side or has curved sides.
             <br> An example is a circle. A circle is connected, <strong>HOWEVER</strong> it is curved and does <strong>NOT</strong> have straight sides. 
 
-           <div class="image"><img src="Shapes/5.png" width="350px" height="350px"></p></div>
+           <div class="image"><img src="5.png" width="350px" height="350px"></p></div>
          </p>
       </div>
    </div>
@@ -70,25 +70,25 @@
 <div class="outer-flex-container">
     <div class="flex-container">
 <div class="quote-box">
-<h2 class="h2"> Triangles</h2> A polygon with 3 angles and 3 connected straight sides.<p><div class="image"><img src="Shapes/triangle.png" width="250px" height="250px" ></p></p></div>
+<h2 class="h2"> Triangles</h2> A polygon with 3 angles and 3 connected straight sides.<p><div class="image"><img src="triangle.png" width="250px" height="250px" ></p></p></div>
 </div>
 </div>
   <div class="flex-container">
 <div class="quote-box">
 <h2 class="h2"> Quadrilaterals</h2> a polygon with 4 connected, straight sides and 4 angles. <br><br>
-<img src="Shapes/1.png" width="100px" height="100px">
-<img src="Shapes/4.png" width="100px" height="100px">
-<img src="Shapes/3.png" width="100px" height="100px"></p>
+<img src="1.png" width="100px" height="100px">
+<img src="4.png" width="100px" height="100px">
+<img src="3.png" width="100px" height="100px"></p>
 </div>
 </div>
   <div class="flex-container">
 <div class="quote-box">
-<h2 class="h2"> Pentagons</h2> A polygon with 5 connected, straight sides and 5 angles.<br><br><br> <img src="images/Doodle Pentagon 1.png" width="100px" height="100px"></p>
+<h2 class="h2"> Pentagons</h2> A polygon with 5 connected, straight sides and 5 angles.<br><br><br> <img src="Doodle Pentagon 1.png" width="100px" height="100px"></p>
 </div>
 </div>
   <div class="flex-container">
 <div class="quote-box">
-<h2 class="h2"> Hexagon</h2> A polygon with 6 connected, straight sides and 6 angles. <br><img src="Shapes/6.png" width="250px" height="250px"></p>
+<h2 class="h2"> Hexagon</h2> A polygon with 6 connected, straight sides and 6 angles. <br><img src="6.png" width="250px" height="250px"></p>
 </div>
 </div>
     </div>
@@ -100,7 +100,7 @@
  Well 3D, or 3 dimensional, figures can be held, tossed and you can see all the sides! <br><br>
  Some of the most common 3D figures include spheres, cones, cylinders, rectangular prisms, and pyramids.  
  3D figures are either curved or have faces, edges, and vertices.
- <div class="image"><img src="images/faceverticeedge.png" width="250px" height="150px"></div>
+ <div class="image"><img src="faceverticeedge.png" width="250px" height="150px"></div>
  
 </p>
 
@@ -115,11 +115,11 @@
 <div class="outer-flex-container" >
 <div class="flex-container">
 
-    <p> <strong>Sphere:</strong> A 3D figure that has 0 faces, 0 vertices, and it's surface is curved.<br><br><img src="images/FREE 3D Shapes_sphere.png" width="150px" height="150px" ></p></div>
-   <div class="flex-container"><p> <strong>Cone:</strong> A 3D figure that has 2 faces (1 is curved and the other is in the shape of a circle), 1 vertices, and it's surface is curved.<br><br><img src="images/FREE 3D Shapes_cone.png" width="150px" height="150px"></p></div>
- <div class="flex-container"><p> <strong>Cylinders:</strong> these have 2 faces in the shape of a circle and one curved face, like soup, each top and bottom is the shape of a circle. <br><br><img src="images/FREE 3D Shapes_cylinder.png" width="150px" height="150px" ></p></div>
- <div class="flex-container"><p> <strong>Pyramids:</strong> has a base that is a square face, and 4 triangle faces that meet at the apex. <br><br><img src="images/FREE 3D Shapes_pyramid.png" width="150px" height="150px" ></p></div>
- <div class="flex-container"><p> <strong>Rectangular Prism:</strong> this has 6 faces, each the shape of a rectangle with 12 edges and 8 vertices. (pic of tissue box) <br><br><img src="images/FREE 3D Shapes_rectangular prism.png" width="150px" height="150px" ></p></div>
+    <p> <strong>Sphere:</strong> A 3D figure that has 0 faces, 0 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_sphere.png" width="150px" height="150px" ></p></div>
+   <div class="flex-container"><p> <strong>Cone:</strong> A 3D figure that has 2 faces (1 is curved and the other is in the shape of a circle), 1 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_cone.png" width="150px" height="150px"></p></div>
+ <div class="flex-container"><p> <strong>Cylinders:</strong> these have 2 faces in the shape of a circle and one curved face, like soup, each top and bottom is the shape of a circle. <br><br><img src="FREE 3D Shapes_cylinder.png" width="150px" height="150px" ></p></div>
+ <div class="flex-container"><p> <strong>Pyramids:</strong> has a base that is a square face, and 4 triangle faces that meet at the apex. <br><br><img src="FREE 3D Shapes_pyramid.png" width="150px" height="150px" ></p></div>
+ <div class="flex-container"><p> <strong>Rectangular Prism:</strong> this has 6 faces, each the shape of a rectangle with 12 edges and 8 vertices. (pic of tissue box) <br><br><img src="FREE 3D Shapes_rectangular prism.png" width="150px" height="150px" ></p></div>
  </div> 
 </div>
   <h1 class="h1" id="comparison">2D vs. 3D shapes</h1>
