--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -43,7 +43,7 @@
  <div class="textbox">
     <p>
 2D shapes are flat shapes. Think of it like a piece of paper, flat! <p>There are two main types of shapes; polygons and non-polygons.</p>
-</p></div>
+</div>
 <br>
 <div class="outer-flex-container">
    <div class="flex-container">
@@ -52,8 +52,8 @@
          <p>A shape that is either not connected by their side or has curved sides.
             <br> An example is a circle. A circle is connected, <strong>HOWEVER</strong> it is curved and does <strong>NOT</strong> have straight sides. 
 
-           <div class="image"><img src="5.png" width="350px" height="350px"></p></div>
-         </p>
+           <div class="image"><img src="5.png" width="350" height="350"></div>
+         
       </div>
    </div>
    <div class="flex-container">
@@ -70,29 +70,29 @@
 <div class="outer-flex-container">
     <div class="flex-container">
 <div class="quote-box">
-<h2 class="h2"> Triangles</h2> A polygon with 3 angles and 3 connected straight sides.<p><div class="image"><img src="triangle.png" width="250px" height="250px" ></p></p></div>
+<h2 class="h2"> Triangles</h2> A polygon with 3 angles and 3 connected straight sides.<p><div class="image"><img src="triangle.png" width="250" height="250" ></div>
 </div>
 </div>
   <div class="flex-container">
 <div class="quote-box">
 <h2 class="h2"> Quadrilaterals</h2> a polygon with 4 connected, straight sides and 4 angles. <br><br>
-<img src="1.png" width="100px" height="100px">
-<img src="4.png" width="100px" height="100px">
-<img src="3.png" width="100px" height="100px"></p>
+<img src="1.png" width="100" height="100">
+<img src="4.png" width="100" height="100">
+<img src="3.png" width="100" height="100">
 </div>
 </div>
   <div class="flex-container">
 <div class="quote-box">
-<h2 class="h2"> Pentagons</h2> A polygon with 5 connected, straight sides and 5 angles.<br><br><br> <img src="Doodle Pentagon 1.png" width="100px" height="100px"></p>
+<h2 class="h2"> Pentagons</h2> A polygon with 5 connected, straight sides and 5 angles.<br><br><br> <img src="Doodle Pentagon 1.png" width="100" height="100">
 </div>
 </div>
   <div class="flex-container">
 <div class="quote-box">
-<h2 class="h2"> Hexagon</h2> A polygon with 6 connected, straight sides and 6 angles. <br><img src="6.png" width="250px" height="250px"></p>
+<h2 class="h2"> Hexagon</h2> A polygon with 6 connected, straight sides and 6 angles. <br><img src="6.png" width="250" height="250">
 </div>
 </div>
     </div>
-  </div>
+
   <h1 class="h1" id="3Dshapes">3D Figures</h1>
   <div class="textbox">
     <p class="p">
@@ -100,9 +100,9 @@
  Well 3D, or 3 dimensional, figures can be held, tossed and you can see all the sides! <br><br>
  Some of the most common 3D figures include spheres, cones, cylinders, rectangular prisms, and pyramids.  
  3D figures are either curved or have faces, edges, and vertices.
- <div class="image"><img src="faceverticeedge.png" width="250px" height="150px"></div>
+ <div class="image"><img src="faceverticeedge.png" width="250" height="150"></div>
  
-</p>
+
 
 <div class="quote-box"><ul>
     <li><strong>Faces:</strong> flat or curved surface</li>
@@ -111,17 +111,17 @@
 </ul>
  </div>
 </div>
-</div>
+
 <div class="outer-flex-container" >
 <div class="flex-container">
 
-    <p> <strong>Sphere:</strong> A 3D figure that has 0 faces, 0 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_sphere.png" width="150px" height="150px" ></p></div>
-   <div class="flex-container"><p> <strong>Cone:</strong> A 3D figure that has 2 faces (1 is curved and the other is in the shape of a circle), 1 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_cone.png" width="150px" height="150px"></p></div>
- <div class="flex-container"><p> <strong>Cylinders:</strong> these have 2 faces in the shape of a circle and one curved face, like soup, each top and bottom is the shape of a circle. <br><br><img src="FREE 3D Shapes_cylinder.png" width="150px" height="150px" ></p></div>
- <div class="flex-container"><p> <strong>Pyramids:</strong> has a base that is a square face, and 4 triangle faces that meet at the apex. <br><br><img src="FREE 3D Shapes_pyramid.png" width="150px" height="150px" ></p></div>
- <div class="flex-container"><p> <strong>Rectangular Prism:</strong> this has 6 faces, each the shape of a rectangle with 12 edges and 8 vertices. (pic of tissue box) <br><br><img src="FREE 3D Shapes_rectangular prism.png" width="150px" height="150px" ></p></div>
+    <p> <strong>Sphere:</strong> A 3D figure that has 0 faces, 0 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_sphere.png" width="150" height="150" ></p></div>
+   <div class="flex-container"><p> <strong>Cone:</strong> A 3D figure that has 2 faces (1 is curved and the other is in the shape of a circle), 1 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_cone.png" width="150" height="150"></p></div>
+ <div class="flex-container"><p> <strong>Cylinders:</strong> these have 2 faces in the shape of a circle and one curved face, like soup, each top and bottom is the shape of a circle. <br><br><img src="FREE 3D Shapes_cylinder.png" width="150" height="150" ></p></div>
+ <div class="flex-container"><p> <strong>Pyramids:</strong> has a base that is a square face, and 4 triangle faces that meet at the apex. <br><br><img src="FREE 3D Shapes_pyramid.png" width="150" height="150" ></p></div>
+ <div class="flex-container"><p> <strong>Rectangular Prism:</strong> this has 6 faces, each the shape of a rectangle with 12 edges and 8 vertices. (pic of tissue box) <br><br><img src="FREE 3D Shapes_rectangular prism.png" width="150" height="150" ></p></div>
  </div> 
-</div>
+
   <h1 class="h1" id="comparison">2D vs. 3D shapes</h1>
   <div class="flex-container">
    <div class="quote-box">
@@ -130,12 +130,12 @@
         <li>2D shapes do not have depth.</li>
         <li>3D figures have faces, edges, and/or vertices.</li>
         <li>3D figures have length, width, depth.</li>
-    </ol></p>
+    </ol>
   </div></div>
   </main>
-  <footer>Alison McAleer <a href="contactme"><img class="icon"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">
-  <img class="iconbig"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">  
-ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img class="icon" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;"> <img class="iconbig" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;">1+888-888-8888 </footer>
+  <footer>Alison McAleer <a href="contactme"><img class="icon" src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">
+  <img class="iconbig" src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">  
+ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img class="icon" src="favicon-16x16.png" alt="favicon" style="width: 20px; height: 20px;"> <img class="iconbig" src="favicon-16x16.png" alt="favicon" style="width: 20px; height: 20px;">1+888-888-8888 </footer>
 
   </body>
   </html>
