--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -39,99 +39,132 @@
  <!-- This is the main content of my site -->
 <main>
   <header> <h1 class="h1">Let's Learn Geometry!</h1></header>
-  <h1 class="h1" id="2Dshapes">2D Shapes</h1>
- <div class="textbox">
-    <p>
-2D shapes are flat shapes. Think of it like a piece of paper, flat! <p>There are two main types of shapes; polygons and non-polygons.</p>
-</div>
-<br>
-<div class="outer-flex-container">
-   <div class="flex-container">
-      <div class="quote-box">
-         <h2 class="h2"> Non-Polygons</h2>
-         <p>A shape that is either not connected by their side or has curved sides.
-            <br> An example is a circle. A circle is connected, <strong>HOWEVER</strong> it is curved and does <strong>NOT</strong> have straight sides. 
-
-           <div class="image"><img src="5.png" width="350" height="350"></div>
-         
-      </div>
-   </div>
-   <div class="flex-container">
-      <div class="quote-box">
-         <h2 class="h2"> Polygons</h2>
+<div class="flex-container">
+  <section id="2dshapes" class="section">
+  <h1 class="h1">2D Shapes</h1>
+  <p>2D shapes are flat shapes. Think of it like a piece of paper, flat! There are two main types of shapes; polygons and non-polygons.</p>
+ <div class="subsection">
+  <h2 class="h2"> Polygons</h2>
          <p>
-            Polygons are 2D shapes that have straight sides which are connected creating vertices. 
+            Polygons are 2D shapes that have straight sides which are connected creating vertices.
             The main types of polygons include triangles, quadrilaterals, (including square and rectangles),
-            pentagon, hexagon. 
+            pentagon, hexagon.
          </p>
-      </div>
-   </div>
-</div>
-<div class="outer-flex-container">
-    <div class="flex-container">
-<div class="quote-box">
-<h2 class="h2"> Triangles</h2> A polygon with 3 angles and 3 connected straight sides.<p><div class="image"><img src="triangle.png" width="250" height="250" ></div>
-</div>
-</div>
-  <div class="flex-container">
-<div class="quote-box">
-<h2 class="h2"> Quadrilaterals</h2> a polygon with 4 connected, straight sides and 4 angles. <br><br>
-<img src="1.png" width="100" height="100">
-<img src="4.png" width="100" height="100">
-<img src="3.png" width="100" height="100">
-</div>
-</div>
-  <div class="flex-container">
-<div class="quote-box">
-<h2 class="h2"> Pentagons</h2> A polygon with 5 connected, straight sides and 5 angles.<br><br><br> <img src="Doodle Pentagon 1.png" width="100" height="100">
-</div>
-</div>
-  <div class="flex-container">
-<div class="quote-box">
-<h2 class="h2"> Hexagon</h2> A polygon with 6 connected, straight sides and 6 angles. <br><img src="6.png" width="250" height="250">
-</div>
-</div>
-    </div>
+        
+        </div>
+        <table>
+<tr>
+  <thead>
+  <th><strong>Shape</strong></th>
+  <th><strong>Sides</strong></th>
+  <th><strong>Angles</strong></th>
+  </thead>
+</tr>
+<tbody>
+<tr> 
+<td>Triangle<br><img src="triangle.png" style="width:200px; height:auto;"></td>
+<td>3</td>
+<td>3</td>
+</tr>
+<tr> 
+<td>Quadrilateral<br>
+  <img src="rectangle.png" style="width:180px; height:auto;"><br>
+  <img src="square.png" style="width:100px; height:auto;">
+</td>
+<td>4</td>
+<td>4</td>
+</tr>
+<tr> 
+<td>Pentagon<br><img src="pentagon.png" style="width:100px; height:auto;"></td>
+<td>5</td>
+<td>5</td>
+</tr>
+<tr> 
+<td>Hexagon<br><img src="hexagon.png" style="width:100px; height:auto;"></td>
+<td>6</td>
+<td>6</td>
+</tr>
+</tbody>
+</table>
+         <div class="subsection">
+  <h2 class="h2"> Non-Polygons</h2>
+         <p>A shape that is either not connected by their side or has curved sides.
+            <br> An example is a circle. A circle is connected, <strong>HOWEVER</strong> it is curved and does <strong>NOT</strong> have straight sides.</p>
 
-  <h1 class="h1" id="3Dshapes">3D Figures</h1>
-  <div class="textbox">
-    <p class="p">
+<div class="img">
+           <img src="5.png">
+</div></div>
+
+</section>
+<section id="3Dshapes" class="section">
+  <h1 class="h1">3D Figures</h1>
+  <p>
 3D figures are quite different from 2D. We talked about 2D shapes being like paper, flat.
  Well 3D, or 3 dimensional, figures can be held, tossed and you can see all the sides! <br><br>
  Some of the most common 3D figures include spheres, cones, cylinders, rectangular prisms, and pyramids.  
  3D figures are either curved or have faces, edges, and vertices.
- <div class="image"><img src="faceverticeedge.png" width="250" height="150"></div>
- 
+<br><br>
 
-
-<div class="quote-box"><ul>
-    <li><strong>Faces:</strong> flat or curved surface</li>
-<li><strong>Edges:</strong> where two faces meet</li>
-<li><strong>Vertices:</strong> where 3 vertices meet </li>
-</ul>
- </div>
+  <strong>Faces</strong> are flat or curved surfaces, <strong>edges</strong> are where two faces meet, and <strong>vertices</strong> are where three edges meet.
+</p>
+<div class="img">
+  <img src="faceverticeedge.png" class="faceverticeedge">
 </div>
 
-<div class="outer-flex-container" >
-<div class="flex-container">
-
-    <p> <strong>Sphere:</strong> A 3D figure that has 0 faces, 0 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_sphere.png" width="150" height="150" ></p></div>
-   <div class="flex-container"><p> <strong>Cone:</strong> A 3D figure that has 2 faces (1 is curved and the other is in the shape of a circle), 1 vertices, and it's surface is curved.<br><br><img src="FREE 3D Shapes_cone.png" width="150" height="150"></p></div>
- <div class="flex-container"><p> <strong>Cylinders:</strong> these have 2 faces in the shape of a circle and one curved face, like soup, each top and bottom is the shape of a circle. <br><br><img src="FREE 3D Shapes_cylinder.png" width="150" height="150" ></p></div>
- <div class="flex-container"><p> <strong>Pyramids:</strong> has a base that is a square face, and 4 triangle faces that meet at the apex. <br><br><img src="FREE 3D Shapes_pyramid.png" width="150" height="150" ></p></div>
- <div class="flex-container"><p> <strong>Rectangular Prism:</strong> this has 6 faces, each the shape of a rectangle with 12 edges and 8 vertices. (pic of tissue box) <br><br><img src="FREE 3D Shapes_rectangular prism.png" width="150" height="150" ></p></div>
- </div> 
-
+<table>
+<tr>
+  <thead>
+  <th><strong>Shape</strong></th>
+  <th><strong>Sides</strong></th>
+  <th><strong>Angles</strong></th>
+  </thead>
+</tr>
+<tbody>
+<tr> 
+<td>Cone<br><img src="cone.png"></td>
+<td>2, 1 curved and the other in the shape of a circle</td>
+<td>1</td>
+<td>Traffic Cone, Icecream Cone</td>
+</tr>
+<tr> 
+<td>Cylinders<br><img src="cylinder.png"></td>
+<td>2 in the shape of a circle and then 1 curved shape</td>
+<td>0</td>
+<td>Soup can</td>
+</tr>
+<tr> 
+<td>Sphere<br><img src="sphere.png"></td>
+<td>0</td>
+<td>0</td>
+<td>ball</td>
+</tr>
+<tr> 
+<td>Pyramids<br><img src="pyramid.png"></td>
+<td>4 triangle, 1 square (as the base)</td>
+<td>5</td>
+<td>Pyramid</td>
+</tr>
+<tr> 
+<td>Rectangular Prism<br><img src="rectangularprism.png"></td>
+<td>6</td>
+<td>8</td>
+<td>Tissue Box</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="comparison" class="section">
   <h1 class="h1" id="comparison">2D vs. 3D shapes</h1>
-  <div class="flex-container">
-   <div class="quote-box">
-    <p class="p"> <h1 class="h1">REMEMBER</h1> <ol>
+   <h1 class="h1">REMEMBER</h1> 
+   <div class="ol">
+   <ol>
         <li>2D shapes are flat!</li>
         <li>2D shapes do not have depth.</li>
         <li>3D figures have faces, edges, and/or vertices.</li>
         <li>3D figures have length, width, depth.</li>
-    </ol>
-  </div></div>
+    </ol></div>
+</section>
+  </div>
   </main>
   <footer>Alison McAleer <a href="contactme"><img class="icon" src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">
   <img class="iconbig" src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">  
