--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -25,7 +25,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-      <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+      <a href="learn.html">Let's Learn!</a> <label id="submenu-toggle" class="dropdownarrow">&#9660;</label>
       <ul class="submenu">
         <li class="subitem"><a href="#2Dshapes">2D Shapes</a></li>
         <li class="subitem"><a href="#3Dshapes">3D Figures</a></li>
@@ -53,34 +53,33 @@
         
         </div>
         <table>
-<tr>
+
   <thead>
   <th><strong>Shape</strong></th>
   <th><strong>Sides</strong></th>
   <th><strong>Angles</strong></th>
   </thead>
-</tr>
 <tbody>
 <tr> 
-<td>Triangle<br><img src="triangle.png" style="width:200px; height:auto;"></td>
+<td>Triangle<br><img src="triangle.png"  alt="triangle"  style="width:200px; height:auto;"></td>
 <td>3</td>
 <td>3</td>
 </tr>
 <tr> 
 <td>Quadrilateral<br>
-  <img src="rectangle.png" style="width:180px; height:auto;"><br>
-  <img src="square.png" style="width:100px; height:auto;">
+  <img src="rectangle.png" alt="rectangle"  style="width:180px; height:auto;"><br>
+  <img src="square.png" alt="square"  style="width:100px; height:auto;">
 </td>
 <td>4</td>
 <td>4</td>
 </tr>
 <tr> 
-<td>Pentagon<br><img src="pentagon.png" style="width:100px; height:auto;"></td>
+<td>Pentagon<br><img src="pentagon.png" alt="pentagon"  style="width:100px; height:auto;"></td>
 <td>5</td>
 <td>5</td>
 </tr>
 <tr> 
-<td>Hexagon<br><img src="hexagon.png" style="width:100px; height:auto;"></td>
+<td>Hexagon<br><img src="hexagon.png" alt="hexagon"  style="width:100px; height:auto;"></td>
 <td>6</td>
 <td>6</td>
 </tr>
@@ -92,7 +91,7 @@
             <br> An example is a circle. A circle is connected, <strong>HOWEVER</strong> it is curved and does <strong>NOT</strong> have straight sides.</p>
 
 <div class="img">
-           <img src="5.png">
+           <img src="5.png" alt="circle">
 </div></div>
 
 </section>
@@ -108,44 +107,42 @@
   <strong>Faces</strong> are flat or curved surfaces, <strong>edges</strong> are where two faces meet, and <strong>vertices</strong> are where three edges meet.
 </p>
 <div class="img">
-  <img src="faceverticeedge.png" class="faceverticeedge">
+  <img src="faceverticeedge.png" alt="faceverticeedge"   class="faceverticeedge">
 </div>
 
 <table>
-<tr>
+<tbody>
   <thead>
   <th><strong>Shape</strong></th>
   <th><strong>Sides</strong></th>
   <th><strong>Angles</strong></th>
   </thead>
-</tr>
-<tbody>
 <tr> 
-<td>Cone<br><img src="cone.png"></td>
+<td>Cone<br><img src="cone.png" alt="cone"></td>
 <td>2, 1 curved and the other in the shape of a circle</td>
 <td>1</td>
 <td>Traffic Cone, Icecream Cone</td>
 </tr>
 <tr> 
-<td>Cylinders<br><img src="cylinder.png"></td>
+<td>Cylinders<br><img src="cylinder.png" alt="cylinder"></td>
 <td>2 in the shape of a circle and then 1 curved shape</td>
 <td>0</td>
 <td>Soup can</td>
 </tr>
 <tr> 
-<td>Sphere<br><img src="sphere.png"></td>
+<td>Sphere<br><img src="sphere.png" alt="sphere"></td>
 <td>0</td>
 <td>0</td>
 <td>ball</td>
 </tr>
 <tr> 
-<td>Pyramids<br><img src="pyramid.png"></td>
+<td>Pyramids<br><img src="pyramid.png" alt="pyramid"></td>
 <td>4 triangle, 1 square (as the base)</td>
 <td>5</td>
 <td>Pyramid</td>
 </tr>
 <tr> 
-<td>Rectangular Prism<br><img src="rectangularprism.png"></td>
+<td>Rectangular Prism<br><img src="rectangularprism.png" alt="rectangularprism"></td>
 <td>6</td>
 <td>8</td>
 <td>Tissue Box</td>
@@ -154,7 +151,7 @@
 </table>
 </section>
 <section id="comparison" class="section">
-  <h1 class="h1" id="comparison">2D vs. 3D shapes</h1>
+  <h1 class="h1">2D vs. 3D shapes</h1>
    <h1 class="h1">REMEMBER</h1> 
    <div class="ol">
    <ol>
